--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -154,26 +154,36 @@ The schedule for the different curricula are listed here:
     <table class="table table-striped">
       <tr>
 	<td>Before starting</td>
-	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
+	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a> 
+		and <a href="https://datacarpentry.org/socialsci-workshop/setup-r-workshop.html" target="_blank">Set-Up</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
-      <tr> <td>Evening</td> <td>END</td> </tr>
+      <tr><td>9:00AM</td> <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
+      <tr><td>10:30AM</td><td>(10 Minute Break)</td></tr>	    
+      <tr><td>10:40AM</td><td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets cont'd</a></td></tr>
+      <tr><td>12:00PM</td><td>(Lunch Break)</td></tr>	    
+      <tr><td>1:00PM</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
+      <tr><td>2:30PM</td><td>(10 Minute Break)</td></tr>	    
+      <tr><td>2:40PM</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning cont'd</a></td></tr>	    
+      <tr><td>4:00PM</td> <td>(End Day 1)</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-socialsci/">Continuation of R: Data Analysis & Visualization</a></td></tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-socialsci/">Data Management with SQL</a></td></tr>
       <tr>
-	<td>Evening</td>
-	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
+	<td>Before starting</td>
+	<td><a href="https://datacarpentry.org/socialsci-workshop/setup-r-workshop.html" target="_blank">Set-Up</a></td>
       </tr>
+      <tr><td>9:00AM</td> <td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
+      <tr><td>10:30AM</td><td>(10 Minute Break)</td></tr>	    
+      <tr><td>10:40AM</td><td><a href="https://datacarpentry.org/r-socialsci/02-starting-with-data.html">R cont'd: Starting with Data</a></td></tr>
+      <tr><td>12:00PM</td><td>(Lunch Break)</td></tr>	    
+      <tr><td>1:00PM</td><td><a href="https://datacarpentry.org/r-socialsci/03-dplyr.html">R cont'd: Data Wrangling with dplyr</a></td></tr>
+      <tr><td>2:30PM</td><td>(10 Minute Break)</td></tr>	    
+      <tr><td>2:40PM</td><td><a href="https://datacarpentry.org/r-socialsci/04-tidyr.html">R cont'd: Data Wrangling with tidyr</a></td></tr>	    
       <tr>
-	<td> </td>
-	<td> END </td>
+	<td>4:00PM</td>
+	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey and (End Day 2)</a></td>
       </tr>
     </table>
   </div>
