--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -183,7 +183,7 @@ The schedule for the different curricula are listed here:
       <tr><td>2:40PM</td><td><a href="https://datacarpentry.org/r-socialsci/04-tidyr.html">R cont'd: Data Wrangling with tidyr</a></td></tr>	    
       <tr>
 	<td>4:00PM</td>
-	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey and (End Day 2)</a></td>
+	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a> (End Day 2)</td>
       </tr>
     </table>
   </div>
