Revise schedule.html

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -157,13 +157,13 @@ The schedule for the different curricula are listed here:
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a> 
 		and <a href="https://datacarpentry.org/socialsci-workshop/setup-r-workshop.html" target="_blank">Set-Up</a></td>
       </tr>
-      <tr><td>9:00AM</td> <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
+      <tr><td>9:00AM</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
       <tr><td>10:30AM</td><td>(10 Minute Break)</td></tr>	    
-      <tr><td>10:40AM</td><td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets cont'd</a></td></tr>
+      <tr><td>10:40AM</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning cont'd</a></td></tr>
       <tr><td>12:00PM</td><td>(Lunch Break)</td></tr>	    
-      <tr><td>1:00PM</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
+      <tr><td>1:00PM</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
       <tr><td>2:30PM</td><td>(10 Minute Break)</td></tr>	    
-      <tr><td>2:40PM</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning cont'd</a></td></tr>	    
+      <tr><td>2:40PM</td><td><a href="https://datacarpentry.org/r-socialsci/02-starting-with-data.html">R cont'd: Starting with Data</a></td></tr>	    
       <tr><td>4:00PM</td> <td>(End Day 1)</td> </tr>
     </table>
   </div>
@@ -174,9 +174,9 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="https://datacarpentry.org/socialsci-workshop/setup-r-workshop.html" target="_blank">Set-Up</a></td>
       </tr>
-      <tr><td>9:00AM</td> <td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
+      <tr><td>9:00AM</td><td><a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
       <tr><td>10:30AM</td><td>(10 Minute Break)</td></tr>	    
-      <tr><td>10:40AM</td><td><a href="https://datacarpentry.org/r-socialsci/02-starting-with-data.html">R cont'd: Starting with Data</a></td></tr>
+      <tr><td>10:40AM</td><td><a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets cont'd</a></td></tr>
       <tr><td>12:00PM</td><td>(Lunch Break)</td></tr>	    
       <tr><td>1:00PM</td><td><a href="https://datacarpentry.org/r-socialsci/03-dplyr.html">R cont'd: Data Wrangling with dplyr</a></td></tr>
       <tr><td>2:30PM</td><td>(10 Minute Break)</td></tr>	    
